# ai-api-rs

./: .env.sample  Cargo.toml
src/api/: error.rs  mod.rs  resp.rs
src/api/observe/: metrics.rs  mod.rs  req_context.rs  req_id.rs  trace.rs
src/api/routes/: healthz.rs  mod.rs
src/api/routes/api/: mod.rs
src/api/routes/api/v1/: mod.rs
src/settings/: mod.rs
