[package]
name = "ai-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
config = "0.15"
dotenvy = "0.15"
humantime = "2"
humantime-serde = "1"
log = "0.4"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry-semantic-conventions = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = "1"
